# ChangeLog for media-sound/mpc
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/ChangeLog,v 1.14 2004/04/14 10:12:57 eradicator Exp $

  14 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.10.0.ebuild,
  mpc-0.10.1.ebuild:
  Removing old ebuilds.

*mpc-0.10.3 (03 Apr 2004)

  03 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.10.3.ebuild:
  Version bump.  Bug #46662.

*mpc-0.10.2 (25 Mar 2004)

  25 Mar 2004; Martin Holzer <mholzer@gentoo.org> mpc-0.10.2.ebuild:
  Version bumped.

*mpc-0.10.1 (14 Mar 2004)

  14 Mar 2004; Martin Holzer <mholzer@gentoo.org> mpc-0.10.1.ebuild:
  Version bumped.

*mpc-0.10.1 (14 Mar 2004)

  14 Mar 2004; Martin Holzer <mholzer@gentoo.org> mpc-0.10.1.ebuild:
  Version bumped.

*mpc-0.10.0 (03 Mar 2004)

  03 Mar 2004; Martin Holzer <mholzer@gentoo.org> mpc-0.10.0.ebuild:
  Version bumped.

  24 Jan 2004; Nick Hadaway <raker@gentoo.org> mpg-0.9.2.ebuild:
  Marked stable for x86.

*mpc-0.9.2 (31 Oct 2003)

  31 Oct 2003; Martin Holzer <mholzer@gentoo.org> mpc-0.9.1.ebuild,
  mpc-0.9.2.ebuild:
  Version bumped & changing to sf

*mpc-0.9.1 (09 Oct 2003)

  09 Oct 2003; Martin Holzer <mholzer@gentoo.org> mpc-0.9.1.ebuild:
  Version bumped.

*mpc-0.9.0 (08 Oct 2003)

  08 Oct 2003; Martin Holzer <mholzer@gentoo.org> mpc-0.9.0.ebuild:
  Version bumped.

  21 Sep 2003; jje <jje@gentoo.org> mpc-0.8.0.ebuild, mpc-0.8.1.ebuild:
  Bump to stable.

*mpc-0.8.1 (13 Aug 2003)

  13 Aug 2003; Nick Hadaway <raker@gentoo.org> mpc-0.8.1.ebuild:
  Version bump.  Minor ebuild cleanups.

  10 Aug 2003; jje <jje@gentoo.org> mpc-0.8.0.ebuild:
  Removed RDEPEND. It's doesn't need mpd on the same box...

*mpc-0.8.0 (10 Aug 2003)

  10 Aug 2003; jje <jje@gentoo.org> mpc-0.8.0.ebuild:
  Initial revision.
  
  Submitted by: sbh <sbh@xmbox.com>
