@@ -1,10 +1,6 @@
-MD5 ae180a48617a5fb93f35f87ebe041648 gmorgan-0.22.ebuild 777
-MD5 a7151ce0b586bf88f5de356618501ba3 gmorgan-0.12.ebuild 619
 MD5 d3129bd4abab9850734c684f8059506f gmorgan-0.22-r1.ebuild 876
 MD5 2f8a535381c540f8ef17c8f053822b8e gmorgan-0.16.ebuild 643
-MD5 078939f8cfa01fa9eb6dbe1aed64ab48 ChangeLog 1130
+MD5 697f4d3b1056efd85ea72f0e92a09d48 ChangeLog 1270
 MD5 3be4f6e757e3057184136a002b0165f9 metadata.xml 221
 MD5 19dd8c42204a066ea57a537453d294be files/digest-gmorgan-0.22-r1 64
-MD5 1a67870af6d88cfc3b565dfd65415d13 files/digest-gmorgan-0.12 64
 MD5 62394940168b5d609833cdbc5a89d3cd files/digest-gmorgan-0.16 64
-MD5 19dd8c42204a066ea57a537453d294be files/digest-gmorgan-0.22 64
