@@ -1,1 +1,0 @@
-MD5 3ca8b537d164897a376fd1abcd5514d1 mpc-0.10.2.tar.gz 209538
