@@ -1,31 +1,0 @@
-# Copyright 1999-2004 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/mpc-0.10.2.ebuild,v 1.1 2004/03/25 16:02:56 mholzer Exp $
-
-IUSE=""
-
-DESCRIPTION="A commandline client for Music Player Daemon (media-sound/mpd)"
-SRC_URI="mirror://sourceforge/musicpd/${P}.tar.gz"
-RESTRICT="nomirror"
-HOMEPAGE="http://www.musicpd.org"
-
-KEYWORDS="~x86"
-SLOT="0"
-LICENSE="GPL-2"
-
-DEPEND="virtual/glibc"
-
-src_compile() {
-	local myconf
-	myconf="--with-gnu-ld"
-
-	econf ${myconf} || die "could not configure"
-
-	emake || die "emake failed"
-}
-
-src_install() {
-	emake install DESTDIR=${D} || die
-	rm -rf ${D}/usr/share/doc/mpc/
-	dodoc AUTHORS COPYING ChangeLog INSTALL README doc/mpc-bashrc
-}
