@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/mpc-0.10.3.ebuild,v 1.2 2004/04/03 14:23:25 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/mpc-0.10.3.ebuild,v 1.3 2004/04/25 17:45:21 eradicator Exp $
 
 IUSE=""
 
@@ -9,7 +9,7 @@ SRC_URI="mirror://sourceforge/musicpd/${P}.tar.gz"
 RESTRICT="nomirror"
 HOMEPAGE="http://www.musicpd.org"
 
-KEYWORDS="~x86"
+KEYWORDS="x86"
 SLOT="0"
 LICENSE="GPL-2"
 
