@@ -1,1 +1,0 @@
-MD5 a8d7f7299fb367e4110c3b6c8c8f6887 mpd-0.10.2.tar.gz 815198
