@@ -1,7 +1,7 @@
-MD5 90aac5d49570d33676fdb2185ac4e401 xmmsctrl-1.7.ebuild 806
+MD5 15f27f44c578f87772f7479f5b9a50b0 xmmsctrl-1.7.ebuild 805
 MD5 470cd23577e02eef4bfbbc1f32feb112 xmmsctrl-1.6-r1.ebuild 808
 MD5 681c9355ddf4923a53444d431c39ea2a xmmsctrl-1.6.ebuild 764
-MD5 cb43ec52ceb6cff6f38585a43cc2c0b2 ChangeLog 1520
+MD5 56991eadc2a4cc8d510347b35339d0da ChangeLog 1613
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 MD5 81df994f3cc643315bc3ce5f0b83e848 files/xmmsctrl-jump.patch 374
 MD5 8a895c8a1f15679dd525bd79ce8516f0 files/digest-xmmsctrl-1.6-r1 62
