@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mpd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.24 2004/04/22 09:39:49 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.25 2004/04/25 17:46:59 eradicator Exp $
+
+  25 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> mpd-0.10.2.ebuild,
+  mpd-0.10.3.ebuild:
+  Stable x86.  Removing old ebuild.
 
   22 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> mpd-0.10.2.ebuild,
   mpd-0.10.3.ebuild:
